Move style into html

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>The Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="/normilize.css" rel="stylesheet">
-  <link href="/style.css" rel="stylesheet">
+  <style>
+    canvas {
+      margin: 0;
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
 </head>
 
 <body>
