Setup top HUD with amount of people left to save (score)

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,16 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+    #hud{
+      text-align: center;
+    }
   </style>
 </head>
 
 <body>
+  <header id="hud">
+    <div><h1>Population: <span id="population"></span></h1></div>
+  </header>
 
 </body>
 
