Game is over when there is no more non-occupied Nodes or there is no more people to evacuate

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
 
 <body>
   <header id="hud">
-    <div><h1>Population: <span id="population"></span></h1></div>
+    <div>
+      <h1>People in danger: <span id="inDanger"></span></h1>
+      <h1>Saved: <span id="saved"></span></h1>
+    </div>
   </header>
 
 </body>
