--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   <header id="hud">
     <div>
       <h1>
-        People in danger: <b id="inDanger"></b> | Saved: <b id="saved"></b>
+        Left to evacuate: <b id="inDanger"></b> | Saved: <b id="saved"></b>
       </h1>
       <h1 style="color:red" id="evac"></h1>
     </div>
@@ -58,7 +58,6 @@
   <section class="modal-content hidden" id="houseTemplate">
     <h4 style="padding:0;margin:0">This is residential building</h4>
     <p>You can save these people if you evacuate them before their house is destroyed</p>
-    <p><b>10 people</b> live here now</p>
     <button id="evacBtn">Evacuate <span id="evacAmount">X</span> people</button>
     <button class="closeModal">Cancel</button>
   </section>
@@ -72,7 +71,7 @@
   <section class="modal-content hidden" id="build">
     <h4>You can build new Tower here to stall enemy and give your citizens a chance to evacuate</h4>
     <h5>But remember every tower requires soldiers who will inevitably die when enemy conquers the Tower. You will NOT be able to save them</h5>
-    <button id="buildTowerBtn">Build Tower</button>
+    <button id="buildTowerBtn">Build Tower (sacrifice 4 people)</button>
     <button class="closeModal">Cancel</button>
   </section>
 
@@ -80,6 +79,13 @@
   <section class="modal-content hidden" id="corrupted">
     <h4 style="padding:0;margin:0">This territory has been conquered and corrupted by enemy</h4>
     <p>So sad...</p>
+    <button class="closeModal">Close</button>
+  </section>
+
+  <section class="modal-content hidden" id="tower">
+    <h4 style="padding:0;margin:0">This is Tower</h4>
+    <h5 style="padding:0;margin:0">It protects territory nearby from being corrupted by enemy until there is at least one defender alive</h5>
+    <p>Defenders alive: <b><span id="defenders"></span> people</b></p>
     <button class="closeModal">Close</button>
   </section>
 </body>
