--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <title>The Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    body {
+      font-family: monospace;
+      font-size: 20;
+    }
     canvas {
       margin: 0;
       display: block;
@@ -31,14 +35,37 @@
     }
     .modal-content {
       background-color: #fefefe;
-      margin: 15% auto; /* 15% from the top and centered */
+      margin: 15% auto;
       padding: 20px;
       border: 1px solid #888;
-      width: 400px; /* Could be more or less, depending on screen size */
+      width: 400px;
       text-align: center;
+      border: 1px solid black;
+      box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    }
+    button {
+      background: #ff7543;
+      color: white;
+      padding: .5em 1em;
+      border-radius: 4px;
+      border:0;
+    }
+    button[disabled] {
+      background: #aeaeae;
+      color: #ccc;
+    }
+    button.closeModal {
+      background: #8eacbb;
+      color: black;
+    }
+    button:hover {
+      box-shadow: 0px 1px 16px -4px rgba(0,0,0,0.75);
     }
     .hidden {
       display: none;
+    }
+    footer{
+      margin-top:30px;
     }
   </style>
 </head>
@@ -46,47 +73,60 @@
 <body>
   <header id="hud">
     <div>
-      <h1>
-        Left to evacuate: <b id="inDanger"></b> | Saved: <b id="saved"></b>
-      </h1>
-      <h1 style="color:red" id="evac"></h1>
+      <h1>People saved: <b id="saved"></b> | Still in danger: <b id="inDanger"></b></h1>
+      <h2 style="color:#ff7543" id="evac"></h2>
     </div>
   </header>
 
   <div class="modal hidden"></div>
 
   <section class="modal-content hidden" id="houseTemplate">
-    <h4 style="padding:0;margin:0">This is residential building</h4>
-    <p>You can save these people if you evacuate them before their house is destroyed</p>
-    <button id="evacBtn">Evacuate <span id="evacAmount">X</span> people</button>
-    <button class="closeModal">Cancel</button>
+    <h2 style="padding:0;margin:0">Residential Building</h2>
+    <h3>You can save these people if you evacuate them before enemy comes to their home!</h3>
+    <footer>
+      <button id="evacBtn">Evacuate <span id="evacAmount">X</span> people</button>
+      <button class="closeModal">Cancel</button>
+    </footer>
   </section>
 
   <section class="modal-content hidden" id="gameOverTemplate">
-    <h4 style="padding:0;margin:0">Game over!</h4>
-    <p>You managed to evacuate: <span id="finalScore"></span> people</p>
-    <button onclick="window.location.reload()">Start over</button>
+    <h2 style="padding:0;margin:0">Game Over!</h2>
+    <h3>You managed to evacuate: <span id="finalScore"></span> people</h3>
+    <footer><button onclick="window.location.reload()">Start over</button></footer>
   </section>
 
   <section class="modal-content hidden" id="build">
-    <h4>You can build new Tower here to stall enemy and give your citizens a chance to evacuate</h4>
-    <h5>But remember every tower requires soldiers who will inevitably die when enemy conquers the Tower. You will NOT be able to save them</h5>
-    <button id="buildTowerBtn">Build Tower (sacrifice 4 people)</button>
-    <button class="closeModal">Cancel</button>
+    <h2>Empty Land</h2>
+    <h3>You can build new Tower here to stall enemy and give your citizens a chance to evacuate</h3>
+    <h3>But remember every tower requires soldiers who will inevitably DIE when enemy conquers the Tower</h3>
+    <h3>You will NOT be able to evacuate them anymore</h3>
+    <footer>
+      <button id="buildTowerBtn">Build Tower (sacrifice 4 people)</button>
+      <button class="closeModal">Cancel</button>
+    </footer>
   </section>
 
-
   <section class="modal-content hidden" id="corrupted">
-    <h4 style="padding:0;margin:0">This territory has been conquered and corrupted by enemy</h4>
-    <p>So sad...</p>
-    <button class="closeModal">Close</button>
+    <h2 style="padding:0;margin:0">Corrupted Land</h2>
+    <h3>This place has been captured and corrupted by enemy</h3>
+    <h3>There is nothing you can do...</h3>
+    <footer>
+      <button class="closeModal">Close</button>
+    </footer>
   </section>
 
   <section class="modal-content hidden" id="tower">
-    <h4 style="padding:0;margin:0">This is Tower</h4>
-    <h5 style="padding:0;margin:0">It protects territory nearby from being corrupted by enemy until there is at least one defender alive</h5>
+    <h2 style="padding:0;margin:0">Tower</h2>
+    <h3 style="padding:0;margin:0">It protects adjacent land while there is at least one defender standing</h3>
     <p>Defenders alive: <b><span id="defenders"></span> people</b></p>
-    <button class="closeModal">Close</button>
+    <footer><button class="closeModal">Close</button></footer>
+  </section>
+
+  <section class="modal-content hidden" id="enemy">
+    <h2 style="padding:0;margin:0">Enemy</h2>
+    <h3 style="padding:0;margin:0">They corrupt our land, destroy our homes, and ruin innocent lives</h3>
+    <h3>You can't stop them. But you can slow them down by building Towers</h3>
+    <footer><button class="closeModal">Close</button></footer>
   </section>
 </body>
 </html>
