--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 <body>
   <header id="hud">
     <div>
-      <h1>People saved: <b id="saved"></b> | Still in danger: <b id="inDanger"></b></h1>
+      <h1>People saved: <b id="saved"></b> | Left to evacuate: <b id="inDanger"></b></h1>
       <h2 style="color:#ff7543" id="evac"></h2>
     </div>
   </header>
@@ -87,7 +87,7 @@
     <h2 style="padding:0;margin:0">Residential Building</h2>
     <h3>You can save these people if you evacuate them before enemy comes to their homes!</h3>
     <footer>
-      <button id="evacBtn" class="primary">Evacuate <span id="evacAmount">X</span> people</button>
+      <button id="evacBtn" class="primary">X</button>
       <button class="closeModal cancel">Cancel</button>
     </footer>
   </section>
@@ -104,7 +104,7 @@
     <h3>But remember: every tower requires soldiers who will inevitably DIE when the enemy conquers the tower</h3>
     <h3>You will NOT be able to evacuate them anymore</h3>
     <footer>
-      <button id="buildTowerBtn" class="primary">Build Tower (sacrifice 4 people)</button>
+      <button id="buildTowerBtn" class="primary">Build Tower (sacrifice 5 people)</button>
       <button class="closeModal cancel">Cancel</button>
     </footer>
   </section>
