--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
       font-size: 20;
     }
     canvas {
-      margin: 0;
+      margin: 110px 0 0;
       display: block;
       position: absolute;
-      top: 50%;
+      top: 0%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, 0%);
       cursor: pointer;
     }
     #hud{
